# wasm-native-libraries

./: .gitignore  .gitmodules  README.md
scripts/: build.sh  build_al.sh  build_egl.sh  build_mcut.sh  build_webgpu.sh  setup.sh
src/: wasm_native.c  wasm_native.h  wgpu.c
src/vcglib/: ci_build.sh
src/vcglib/BlazorDemo/: .gitignore  BlazorDemo.csproj  BlazorDemo.sln  Program.cs  _Imports.razor
src/vcglib/BlazorDemo/Pages/: Counter.razor  NativeCTest.razor
src/vcglib/BlazorDemo/Properties/: launchSettings.json
src/vcglib/BlazorDemo/Shared/: NavMenu.razor
src/vcglib/BlazorDemo/wwwroot/: index.html
src/vcglib/vcglib-sharp-wasm/: VCGLibFacade.cs  vcglib-sharp-wasm.csproj
src/vcglib/vcglib-sharp-wasm/vcglib_wasm/: CMakeLists.txt  vcglib_facade.cpp
